projects/vb6parse/snapshots/parsers/cst/file_operations/get/get_at_module_level.snap
---
source: projects/vb6parse/tests/file_operations/get.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: GetStatement
      children:
        - kind: GetKeyword
          text: Get
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Octothorpe
              text: "#"
            - kind: IntegerLiteral
              text: "1"
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: myData
    - kind: Newline
      text: "\n"
