projects/vb6parse/snapshots/parsers/cst/file_operations/get/get_preserves_whitespace.snap
---
source: projects/vb6parse/tests/file_operations/get.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: GetStatement
      children:
        - kind: GetKeyword
          text: Get
        - kind: Whitespace
          text: "    "
        - kind: IdentifierExpression
          children:
            - kind: Octothorpe
              text: "#"
            - kind: IntegerLiteral
              text: "1"
        - kind: Whitespace
          text: "  "
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: "  "
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: "  "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: myVar
            - kind: Whitespace
              text: "    "
    - kind: Newline
      text: "\n"
